Minor Changes to fix Login layout issue.

--- a/data/rightNow/src/client/styles/styles.less
+++ b/data/rightNow/src/client/styles/styles.less
@@ -1956,7 +1956,7 @@ a {
 
 .loginCont .logo{text-align:left;}
 .loginCont .login-form{background:#eee; padding:40px 40px 30px;}
-.loginCont .login-form .ng-untouched{width:100%; background:@color_lightgrey; border:0px !important; margin-bottom:30px; padding:5px 10px !important; height:40px;}
+.loginCont .login-form input[type='text'],.loginCont .login-form input[type='password'] {width:100%; background:@color_lightgrey; border:0px !important; margin-bottom:30px; padding:5px 10px !important; height:40px;}
 
 .loginCont .introCol{border-top:1px solid @color_lightgrey; border-bottom:1px solid @color_lightgrey; margin-top:50px; margin-bottom:40px; padding:15px 0;}
 .loginCont .btn-primary {background:@color_lightblue !important; border:0px; text-transform:uppercase;}
